# shiny

./: CMakeLists.txt  Readme.md  annotated.html  classes.html  classsh_1_1_boolean_value-members.html  classsh_1_1_boolean_value.html  classsh_1_1_boolean_value__inherit__graph.map  classsh_1_1_boolean_value__inherit__graph.md5  classsh_1_1_configuration-members.html  classsh_1_1_configuration.html  classsh_1_1_configuration__inherit__graph.map  classsh_1_1_configuration__inherit__graph.md5  classsh_1_1_factory-members.html  classsh_1_1_factory.html  classsh_1_1_float_value-members.html  classsh_1_1_float_value.html  classsh_1_1_float_value__inherit__graph.map  classsh_1_1_float_value__inherit__graph.md5  classsh_1_1_gpu_program-members.html  classsh_1_1_gpu_program.html  classsh_1_1_gpu_program__inherit__graph.map  classsh_1_1_gpu_program__inherit__graph.md5  classsh_1_1_int_value-members.html  classsh_1_1_int_value.html  classsh_1_1_int_value__inherit__graph.map  classsh_1_1_int_value__inherit__graph.md5  classsh_1_1_linked_value-members.html  classsh_1_1_linked_value.html  classsh_1_1_linked_value__inherit__graph.map  classsh_1_1_linked_value__inherit__graph.md5  classsh_1_1_material-members.html  classsh_1_1_material.html  classsh_1_1_material__inherit__graph.map  classsh_1_1_material__inherit__graph.md5  classsh_1_1_material_instance-members.html  classsh_1_1_material_instance.html  classsh_1_1_material_instance__inherit__graph.map  classsh_1_1_material_instance__inherit__graph.md5  classsh_1_1_material_instance_listener-members.html  classsh_1_1_material_instance_listener.html  (+143 more)
Docs/: Configurations.dox  Doxyfile  GettingStarted.dox  Lod.dox  Macros.dox  Mainpage.dox  Materials.dox
Extra/: core.h
Main/: Factory.cpp  Factory.hpp  MaterialInstance.cpp  MaterialInstance.hpp  MaterialInstancePass.hpp  MaterialInstanceTextureUnit.hpp  Platform.cpp  Platform.hpp  Preprocessor.cpp  Preprocessor.hpp  PropertyBase.cpp  PropertyBase.hpp  ScriptLoader.cpp  ScriptLoader.hpp  ShaderInstance.cpp  ShaderInstance.hpp  ShaderSet.cpp  ShaderSet.hpp
example/: FindSHINY.cmake
mcpp/: main.c  mcpp_lib.h  noconfig.H
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  (+180 more)
